Bug 1288446 - Call glCheckFramebufferStatus after glFramebufferTexture2D to avoid driver crash. r=jrmuizel, a=ritu

Some PowerVR SGX540 devices running Android 4.0 were crashing when
uploading texture data with glTexSubImage2D. This was unearthed by a
Skia upgrade which removed what should have been an unnecessary OpenGL
call. This reinstates the OpenGL call which prevents the crash, but at a
GLContext level rather than in Skia.

MozReview-Commit-ID: Dub8VSs2Dzd

--HG--
extra : source : d0a451335c438bfda973c223f39ef1d47adc6973
extra : intermediate-source : f2f356aa4228c448cfb9ba7f03b2cdfcfd331f34